# shepherd

./: .gitignore  AGENTS.md  LICENSE  README.md  demo.py  pyproject.toml
assets/: demo.tape
examples/: sbatch_wrapper.sh
shepherd/: __init__.py  __main__.py  backoff.py  blacklist.py  cli.py  constants.py  daemon.py  fs.py  heartbeat.py  remotes.py  slurm.py  state.py  status.py  tui.py  wrapper.py
tests/: test_backoff.py  test_blacklist.py  test_daemon.py  test_heartbeat.py  test_state.py
