[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-shepherd"
version = "0.1.0"
description = "User-space Slurm job shepherd with automatic restart, heartbeat monitoring, node blacklisting, and TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
]
keywords = ["slurm", "hpc", "job-scheduler", "cluster", "gpu", "monitoring"]

[project.scripts]
shepherd = "shepherd.cli:main"

[project.urls]
Homepage = "https://github.com/jiwan/shepherd"
Repository = "https://github.com/jiwan/shepherd"

[tool.setuptools.packages.find]
where = ["."]
include = ["shepherd*"]

[tool.setuptools.package-data]
shepherd = ["py.typed"]
